--- a/site/_includes/footer.html
+++ b/site/_includes/footer.html
@@ -1,4 +1,5 @@
 {% assign c = "c-footer" %}
+{% assign footer = site.data.footer %}
 <div class="{{c}}">
 	<div class="{{c}}__lower-text">
 		{{ footer.lower_text_html }}
