--- a/site/_includes/sass/site.scss
+++ b/site/_includes/sass/site.scss
@@ -1,4 +1,3 @@
-
 * {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
@@ -14,14 +13,11 @@ html {
 
 html,
 body {
-    --font: var(--body-font), "Helvetica Neue", "Helvetica", "Arial";
-    --headings-fonts: var(--headings-font), "Helvetica Neue", "Helvetica", "Arial";
+    --content-font: "Helvetica Neue", "Helvetica", "Arial";
     --component-padding: 100px;
-    --navigation-offset: 70px;
     position: relative;
     margin: 0;
-    font-family: var(--font);
-    color: var(--text-color);
+    font-family: var(--content-font);
     overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
 }
