--- a/bookshop-components/components/content/content.jekyll.html
+++ b/bookshop-components/components/content/content.jekyll.html
@@ -1,6 +1,12 @@
 <div class="{{c}}__inner-wrapper
             component">
-    <div class="{{c}}__content-wrapper">
+    <div class="{{c}}__content-wrapper"
+         style="{% if include.font %}
+                    font-family: '{{ include.font }}';
+                {% endif %}
+                {% if include.text_color %}
+                    color: {{ include.text_color }};
+                {% endif %}">
         {{ include.content_html }}
     </div>
 </div>
