--- a/site/_includes/sass/site.scss
+++ b/site/_includes/sass/site.scss
@@ -20,4 +20,15 @@ body {
     font-family: var(--content-font);
     overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
+    background-color: #eeeeee;
+}
+
+.body-wrapper {
+    margin: 50px auto;
+    padding: 50px;
+    max-width: 1080px;
+    min-height: 90vh;
+    background-color: #ffffff;
+    border-radius: 12px;
+    box-shadow: 0px 4px 10px #ddd;
 }
