--- a/site/_includes/sass/site.scss
+++ b/site/_includes/sass/site.scss
@@ -31,4 +31,106 @@ body {
     background-color: #ffffff;
     border-radius: 12px;
     box-shadow: 0px 4px 10px #ddd;
+    font-size: 1.8em;
+}
+
+.site-heading {
+    text-align: center;
+}
+// CMS Styles
+
+.cms-add-component-button {
+    padding: 12px 20px;
+    width: auto;
+    border-radius: 4px;
+    box-shadow: 0px 0px 1px #5e5e5e;
+    border: 2px solid #cfcfcf;
+    background: #ffffff;
+    text-align: center;
+    font-family: 'TT Norms Pro', 'Arial';
+    font-size: 16px;
+    color: #222222;
+    cursor: pointer;
+}
+
+.cms-editor-active {
+    .cms-editor-link {
+        position: relative;
+        outline: unset !important;
+        cursor: pointer;
+
+        .cms-editor-button {
+            position: absolute;
+            padding: 30px;
+            height: 100%;
+            pointer-events: none;
+
+            &:after {
+                content: 'Edit Component';
+                display: block;
+                position: sticky;
+                z-index: 99;
+                top: 30px;
+                padding: 12px 20px;
+                width: auto;
+                border-radius: 4px;
+                box-shadow: 0px 0px 1px #5e5e5e;
+                border: 2px solid #cfcfcf;
+                background: #ffffff;
+                text-align: center;
+                font-family: 'TT Norms Pro', var(--font);
+                font-size: 16px;
+                color: #222222;
+                opacity: 0;
+                transition: opacity 0.15s ease-in;
+            }
+
+            &:hover {
+                &:after {
+                    border: 2px solid #707070;
+                }
+            }
+        }
+
+        &:after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 0;
+            right: 0;
+            margin: 0 auto;
+            transform: translateY(-50%);
+            width: 99%;
+            height: 99%;
+            border: 6px solid gold;
+            opacity: 0;
+            border-radius: 8px;
+            box-shadow: inset 0px 0px 4px #ffd90a;
+            pointer-events: none;
+            box-sizing: border-box;
+            transition: opacity 0.15s ease-in;
+        }
+        
+        &:hover {
+            outline: 0 solid transparent;
+
+            .cms-editor-button {
+                pointer-events: all;
+
+                &:after {
+
+                    opacity: 1;
+                }
+            }
+
+            &:after {
+                opacity: 1;
+            }
+
+            .component {
+                // filter: blur(4px);
+                opacity: 0.9;
+            }
+        }
+    }
 }
