--- a/site/_includes/sass/site.scss
+++ b/site/_includes/sass/site.scss
@@ -84,7 +84,6 @@ body {
 
         .cms-editor-button {
             position: absolute;
-            padding: 30px;
             height: 100%;
             pointer-events: none;
 
@@ -119,12 +118,12 @@ body {
             content: '';
             position: absolute;
             top: 50%;
-            left: 0;
+            left: -2%;
             right: 0;
             margin: 0 auto;
             transform: translateY(-50%);
-            width: 99%;
-            height: 99%;
+            width: 104%;
+            height: 100%;
             border: 6px solid gold;
             opacity: 0;
             border-radius: 8px;
