--- a/site/assets/cms-styles.css
+++ b/site/assets/cms-styles.css
@@ -1,3 +1,6 @@
+// CloudCannon editor styles
+
+// These define the styles for the text alignment toolbar options in rich content areas
 .align-to-left {
 	text-align: left;
 }
@@ -15,6 +18,7 @@
     text-justify: inter-word;
 }
 
+// Custom style sets selectable from the "Styles" menu in rich content areas
 span.red-text {
 	color: red;
 }
