--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -5,20 +5,20 @@
     <div class="body-wrapper">
         {% include navigation.html %}
         <h1 class="site-heading">{{ site.data.general_settings.website_title }}</h1>
-        <!-- 
-            A data-bookshop-live enables live editing previews in CloudCannon.
-            To enable live previews of new components, we render all components
-            via a page component that expects an array of content blocks.
 
-            data-bookshop-props is used to control what front matter to bind to.
-            Here we want to bind to all the front matter, so that page.content_blocks
-            is accessible from the bookshop renderer.
-
-            This element will get picked up by the bookshop dev renderer if present,
-            on production this does nothing.
-        -->
         <div data-bookshop-live="page" data-bookshop-props="page">
             <!-- 
+                The data-bookshop-live attribute enables live editing previews in CloudCannon.
+                To enable live previews of new components, all components are rendered
+                via a page component that expects an array of content blocks.
+
+                data-bookshop-props is used to control what front matter to bind to.
+                Here we want to bind to all the front matter, so that page.content_blocks
+                is accessible from the bookshop renderer.
+
+                This element will get picked up by the bookshop dev renderer if present,
+                on production this does nothing.
+
                 Bookshop components are accessed using the bookshop tag, 
                 using the same syntax as the standard Jekyll include tag.
             -->
@@ -26,10 +26,9 @@
             {% bookshop page content_blocks=page.content_blocks page_theme=page.page_theme %}
         </div>
         {{ content }}
-
         <a class="cms-editor-link
                   cms-add-component-button" 
-             data-cms-editor-link="cloudcannon:#content_blocks">Add Components</a>
+           data-cms-editor-link="cloudcannon:#content_blocks">Add Components</a>
 
         {% include footer.html %}
 
