--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -6,25 +6,13 @@
         {% include navigation.html %}
         <h1 class="site-heading">{{ site.data.general_settings.website_title }}</h1>
 
-        <div data-bookshop-live="page" data-bookshop-props="page">
-            <!-- 
-                The data-bookshop-live attribute enables live editing previews in CloudCannon.
-                To enable live previews of new components, all components are rendered
-                via a page component that expects an array of content blocks.
 
-                data-bookshop-props is used to control what front matter to bind to.
-                Here we want to bind to all the front matter, so that page.content_blocks
-                is accessible from the bookshop renderer.
+        {% comment %}
+            # The `page` include loops through all content_blocks and renders them.
+            # Using a bookshop tag here means that live previewing will catch new components.
+        {% endcomment %}
+        {% bookshop_include page content_blocks=page.content_blocks page_theme=page.page_theme %}
 
-                This element will get picked up by the bookshop dev renderer if present,
-                on production this does nothing.
-
-                Bookshop components are accessed using the bookshop tag, 
-                using the same syntax as the standard Jekyll include tag.
-            -->
-
-            {% bookshop page content_blocks=page.content_blocks page_theme=page.page_theme %}
-        </div>
         {{ content }}
         <a class="cms-editor-link
                   cms-add-component-button" 
@@ -32,9 +20,10 @@
 
         {% include footer.html %}
 
-        <!--
-            live component for CloudCannon live previews.
-        -->
+        {% comment %}
+            # This tag registers live previewing on CloudCannon.
+            # The script path matches the `bookshop-live` command in package.json.
+        {% endcomment %}
         {% bookshop_live _cloudcannon/bookshop-live.js %}
     </div>
 </body>
